# ffmpeg-media-player

./: .gitignore  README.md  android-arm64-v8a.sh  android_arm64_v8a.sh  build_x264.sh  ffplay.c  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: ShaderUtils.cpp  ShaderUtils.h  UAddBg.cpp  UAddBg.h  UAudio.cpp  UAudio.h  UCallJava.cpp  UCallJava.h  UChange.cpp  UChange.h  UCut.cpp  UCut.h  UDecode.cpp  UDecode.h  UEGL.cpp  UEGL.h  UFilters.cpp  UFilters.h  ULog.h  UOpenSLES.cpp  UOpenSLES.h  UPlayer.cpp  UPlayer.h  UQueue.cpp  UQueue.h  UVideo.cpp  UVideo.h  native-lib.cpp
app/src/main/java/onlyou/pw/faceu/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
